wip: add chevron-right icon, update html meta-tags

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="theme-color" content="#000000" />
-<meta name="title" content="" />
-<meta name="description" content="" />
-<meta name="keywords" content=""/>
-<!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-<!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" /> -->
+<meta name="title" content="Netflix Clone App" />
+<meta name="description" content="The goal is to replicate the existing web app, maintain the same experience, and make some minor improvements." />
+<meta name="keywords" content="Netflix, Web App, React, JavaScript, React Router, Sass, Styled Components, Storybook, Firebase" />
+<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+<link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
 <title>Netflix | Clone App</title>
 </head>
 
