add: firebase auth cdn to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,8 @@
 <body>
 <noscript>enable JS to run this app.</noscript>
 <div id="root"></div>
+
+<!-- Firebase auth cdn -->
+<script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-auth.js"></script>
 </body>
 </html>
