--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,14 @@
 <noscript>enable JS to run this app.</noscript>
 <div id="root"></div>
 
-<!-- Firebase auth cdn -->
-<script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-auth.js"></script>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="/__/firebase/8.6.3/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="/__/firebase/8.6.3/firebase-analytics.js"></script>
+
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
 </body>
 </html>
