--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="theme-color" content="#000000" />
 <meta name="title" content="Netflix Clone App" />
-<meta name="description" content="The goal is to replicate the existing web app, maintain the same experience, and make some minor improvements." />
-<meta name="keywords" content="Netflix, Web App, React, JavaScript, React Router, Sass, Styled Components, Storybook, Firebase" />
+<meta name="description" content="The goal is to replicate an existing web app, maintain the same experience, and make subtle improvements." />
+<meta name="keywords" content="Netflix, Web App, TMDB, React, JavaScript, React Router, Firebase, Sass, Styled Components, Storybook, React Query, Fuse.js" />
 <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
 <title>Netflix | Clone App</title>
@@ -15,6 +15,5 @@
 <body>
 <noscript>enable JS to run this app.</noscript>
 <div id="root"></div>
-
 </body>
 </html>
